[package]
name = "x-one"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9" }
serde_json = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = { version = "0.2" }
chrono = { version = "0.4" }
chrono-tz = { version = "0.10" }
dotenvy = { version = "0.15" }
regex = { version = "1" }
thiserror = { version = "2" }
local-ip-address = { version = "0.6" }
parking_lot = { version = "0.12" }
ctor = { version = "0.2" }
opentelemetry = { version = "0.28" }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.28", features = ["trace"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "any"] }
moka = { version = "0.12", features = ["sync"] }
humantime = { version = "2" }
backon = { version = "1" }

[dev-dependencies]
tokio-test = { version = "0.4" }
tempfile = { version = "3" }
serial_test = { version = "3" }
tower = { version = "0.5.3", features = ["util"] }
